--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,10 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/logo-256.jpg" rel="apple-touch-icon">
+
 </head>
 <body>
-  <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav"><a href="#" class="logo w-nav-brand"><img src="images/logo.png"></a>
+  <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav"><a href="#" class="logo w-nav-brand"><img data-src="images/logo.png"></a>
     <nav role="navigation" class="nav_menu w-nav-menu"><a href="#top" class="navlink w-nav-link">Home</a><a href="#lasik_info" class="navlink w-nav-link">premium cataract surgery</a><a href="#testimonials" class="navlink w-nav-link">lens options</a><a href="#ny_group" class="navlink w-nav-link">about NY vison group</a><a href="#self_test" class="navlink w-nav-link">cataract self test</a><a href="#appointment" class="navlink w-nav-link">schedule now</a><a href="#locations" class="navlink w-nav-link">locations</a></nav>
     <div class="menu_btn w-nav-button">
       <div class="w-icon-nav-menu"></div>
@@ -21,7 +22,7 @@
   </div>
   <div id="top" class="hero_section">
     <div class="main_tagline_div">
-      <h1 data-w-id="2f794ba8-8aa4-f8be-899d-a9cfb0deb0b1" style="-webkit-transform:translateX(-161PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-moz-transform:translateX(-161PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-ms-transform:translateX(-161PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);transform:translateX(-161PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);opacity:0" class="main_tagline">See. The Best.</h1>
+      <h1 data-w-id="2f794ba8-8aa4-f8be-899d-a9cfb0deb0b1" style="-webkit-transform:translateX(-161PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-moz-transform:translateX(-161PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-ms-transform:translateX(-161PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);transform:translateX(-161PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);opacity:0" class="main_tagline">See.<br>The Best.</h1>
       <h3 data-w-id="b55274e2-43d0-d4aa-4a8b-adebdfe179a4" style="-webkit-transform:translateX(-196PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-moz-transform:translateX(-196PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-ms-transform:translateX(-196PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);transform:translateX(-196PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);opacity:0" class="main_tagline_smaller">Premium Cataract Surgery with Harry Koster, MD and NY Vision Group</h3>
     </div>
   </div>
@@ -43,16 +44,16 @@
         <li class="list_item">Accommodating lenses such as the Crystalens lens implants, designed to move with your eye as you focus from distance to near.</li>
       </ul>
       <p class="text">In addition, NY Vision Group offers the Astigmatic-Correcting Toric lens implants to help reduce or eliminate astigmatism after cataract surgery. We specialize in using having Optiware Refractive Analysis (a unique laser measurement system of the eye during cataract surgery, used to check and fine-tune intraocular measurements) and FEMTO laser-assisted cataract surgery. This revolutionary technology allows Dr. Koster to use a laser to make all necessary incisions, correct astigmatism and soften the cataract prior to removal.</p>
-      <div class="lens_img_div"><img src="images/restore.png" class="lens_img">
+      <div class="w-col w-col-3 w-col-medium-6 w-col-small-6 w-col-tiny-12 lens_img_div"><img data-src="images/restore.png" class="lens_img">
         <div class="lens_text">restor</div>
       </div>
-      <div class="lens_img_div"><img src="images/symphony.png" class="lens_img">
+      <div class="w-col w-col-3 w-col-medium-6 w-col-small-6 w-col-tiny-12 lens_img_div"><img data-src="images/symphony.png" class="lens_img">
         <div class="lens_text">Tecnis symphony</div>
       </div>
-      <div class="lens_img_div"><img src="images/crystalens.png" class="lens_img">
+      <div class="w-col w-col-3 w-col-medium-6 w-col-small-6 w-col-tiny-12 lens_img_div"><img data-src="images/crystalens.png" class="lens_img">
         <div class="lens_text">crystalens</div>
       </div>
-      <div class="lens_img_div"><img src="images/tecnis.png" class="lens_img">
+      <div class="w-col w-col-3 w-col-medium-6 w-col-small-6 w-col-tiny-12 lens_img_div"><img data-src="images/tecnis.png" class="lens_img">
         <div class="lens_text">Tecnis toric</div>
       </div>
     </div>
@@ -67,45 +68,15 @@
     <div class="container_div test_form">
       <div class="lasik_test_img_div">
         <div class="lasik_img_container">
-          <div data-w-id="4e81f9fa-849a-9b46-8f4f-3b4b361e3452" class="lasik_img"><img src="images/cataract-couple.png"></div>
+          <div data-w-id="4e81f9fa-849a-9b46-8f4f-3b4b361e3452" class="lasik_img"><img data-src="images/cataract-couple.png"></div>
         </div>
       </div>
       <div class="cataract_form_div">
         <h1 class="section_headline">Take our <strong>Cataract Test</strong></h1>
         <div class="w-form">
-          <form id="email-form-2" name="email-form-2" data-name="Email Form 2" class="w-clearfix">
-            <div class="test_left_div">
-              <div class="test_question">1. Which one describes your vision best?</div>
-              <div class="radio-button-field w-radio"><input type="radio" id="Blurry or cloudy" name="radio" value="Blurry or cloudy" data-name="Radio" class="w-radio-input"><label for="Blurry or cloudy" class="w-form-label">Blurry or cloudy</label></div>
-              <div class="radio-button-field w-radio"><input type="radio" id="radio-5" name="radio" value="Radio" data-name="Radio 5" class="w-radio-input"><label for="radio-5" class="w-form-label">Not as colorful and vibrant as it used to be</label></div>
-              <div class="radio-button-field w-radio"><input type="radio" id="radio-4" name="radio" value="Radio" data-name="Radio 4" class="w-radio-input"><label for="radio-4" class="w-form-label">Halos around lights and/or over-sensitivity to light</label></div>
-              <div class="radio-button-field w-radio"><input type="radio" id="radio-3" name="radio" value="Radio" data-name="Radio 3" class="w-radio-input"><label for="radio-3" class="w-form-label">Poor vision at night</label></div>
-              <div class="radio-button-field w-radio"><input type="radio" id="radio-2" name="radio" value="Radio" data-name="Radio 2" class="w-radio-input"><label for="radio-2" class="w-form-label">Double or multiple images in one eye</label></div>
-              <div class="radio-button-field w-radio"><input type="radio" id="radio-6" name="radio" value="Radio" data-name="Radio 6" class="w-radio-input"><label for="radio-6" class="w-form-label">None of the above</label></div>
-              <div class="test_question">2. Do you have difficulty seeing street signs? (curbs, freeway exits, traffic lights, halos/glare around lights)</div>
-              <div class="radio-button-field w-radio"><input type="radio" id="Blurry or cloudy" name="radio" value="Blurry or cloudy" data-name="Radio" class="w-radio-input"><label for="Blurry or cloudy-2" class="w-form-label">Yes</label></div>
-              <div class="radio-button-field w-radio"><input type="radio" id="Blurry or cloudy" name="radio" value="Blurry or cloudy" data-name="Radio" class="w-radio-input"><label for="Blurry or cloudy-2" class="w-form-label">No</label></div>
-              <div class="test_question">3. Do you have difficulty with leisure activities such as sports or hobbies? (playing card games, bingo, dominos or sports such as bowling, hunting, golf, tennis or other)</div>
-              <div class="radio-button-field w-radio"><input type="radio" id="Blurry or cloudy" name="radio" value="Blurry or cloudy" data-name="Radio" class="w-radio-input"><label for="Blurry or cloudy-2" class="w-form-label">Yes</label></div>
-              <div class="radio-button-field w-radio"><input type="radio" id="Blurry or cloudy" name="radio" value="Blurry or cloudy" data-name="Radio" class="w-radio-input"><label for="Blurry or cloudy-2" class="w-form-label">No</label></div>
-            </div>
-            <div class="test_right_div w-clearfix">
-              <div class="test_question">4. Do you have difficulty reading books and newspapers with good light, extra blinking and proper glasses?</div>
-              <div class="radio-button-field w-radio"><input type="radio" id="Blurry or cloudy" name="radio" value="Blurry or cloudy" data-name="Radio" class="w-radio-input"><label for="Blurry or cloudy-2" class="w-form-label">Yes</label></div>
-              <div class="radio-button-field w-radio"><input type="radio" id="Blurry or cloudy" name="radio" value="Blurry or cloudy" data-name="Radio" class="w-radio-input"><label for="Blurry or cloudy-2" class="w-form-label">No</label></div>
-              <div class="test_question">5. What is MOST important for you to be able to do WITHOUT glasses?</div>
-              <div class="radio-button-field w-radio"><input type="radio" id="Blurry or cloudy" name="radio" value="Blurry or cloudy" data-name="Radio" class="w-radio-input"><label for="Blurry or cloudy-2" class="w-form-label">Read newsprint and books</label></div>
-              <div class="radio-button-field w-radio"><input type="radio" id="Blurry or cloudy" name="radio" value="Blurry or cloudy" data-name="Radio" class="w-radio-input"><label for="Blurry or cloudy-2" class="w-form-label">Computer screen and price tags</label></div>
-              <div class="radio-button-field w-radio"><input type="radio" id="Blurry or cloudy" name="radio" value="Blurry or cloudy" data-name="Radio" class="w-radio-input"><label for="Blurry or cloudy-2" class="w-form-label">Watching TV, cooking and cleaning</label></div>
-              <div class="radio-button-field w-radio"><input type="radio" id="Blurry or cloudy" name="radio" value="Blurry or cloudy" data-name="Radio" class="w-radio-input"><label for="Blurry or cloudy-2" class="w-form-label">Driving or golfing</label></div>
-              <div class="radio-button-field last w-radio"><input type="radio" id="Blurry or cloudy" name="radio" value="Blurry or cloudy" data-name="Radio" class="w-radio-input"><label for="Blurry or cloudy-2" class="w-form-label">Night driving or watching movies</label></div><input type="text" class="text_field w-input" maxlength="256" name="Name" data-name="Name" placeholder="Enter your name" id="Name-3" required=""><input type="text" class="text_field w-input" maxlength="256" name="phone" data-name="phone" placeholder="Enter your phone" id="phone-2" required=""><input type="text" class="text_field w-input" maxlength="256" name="emial" data-name="emial" placeholder="Enter your email" id="emial" required=""><input type="submit" value="Submit" data-wait="Please wait..." class="test_dubmit_btn w-button"></div>
-          </form>
-          <div class="success_msg white w-form-done">
-            <div>Thank you! Your submission has been received!</div>
-          </div>
-          <div class="error-msg w-form-fail">
-            <div>Oops! Something went wrong while submitting the form.</div>
-          </div>
+        <!-- forms.glacial.com script begins here -->
+        <script type="text/javascript" defer src="//forms.glacial.com/embed/3388481.js" data-role="form" data-default-width="650px"></script>
+        <!-- forms.glacial.com script ends here -->
         </div>
       </div>
     </div>
@@ -116,13 +87,9 @@
       <div class="appointment_div">
         <h1 class="section_headline black"><strong>Schedule</strong> Today</h1>
         <div class="w-form">
-          <form id="email-form" name="email-form" data-name="Email Form"><input type="text" class="text_field w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your name" id="name" required=""><input type="text" class="text_field w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Enter your phone" id="Phone" required=""><input type="text" class="text_field w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your email" id="email" required=""><input type="submit" value="Submit" data-wait="Please wait..." class="submit_btn w-button"></form>
-          <div class="success_msg w-form-done">
-            <div>Thank you! Your submission has been received!</div>
-          </div>
-          <div class="error-msg w-form-fail">
-            <div>Oops! Something went wrong while submitting the form.</div>
-          </div>
+          <!-- forms.glacial.com script begins here -->
+          <script type="text/javascript" defer src="//forms.glacial.com/embed/3388538.js" data-role="form" data-default-width="100%"></script>
+          <!-- forms.glacial.com script ends here -->
         </div>
       </div>
     </div>
@@ -157,10 +124,20 @@
     </div>
   </div>
   <div class="section footer">
-    <div class="container_div"><a href="#" class="logo bottom w-nav-brand"><img src="images/logo.png"></a>
+    <div class="container_div"><a href="#" class="logo bottom w-nav-brand"><img data-src="images/logo.png"></a>
       <div class="footer_text">©2017 All Rights Reserved. <br>Medical website design by Glacial Multimedia, Inc.©</div>
     </div>
   </div>
+  <script>
+   window.lazyLoadOptions = {
+     elements_selector: "iframe, img",
+     class_loading: "src--loading",
+     class_loaded: "src--loaded",
+     threshold: "600"
+   };
+ </script>
+ <!-- Download the script and execute it after lazyLoadOptions is defined -->
+ <script async src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/8.6.0/lazyload.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Roboto:100,300,regular,500,700,900","Roboto Condensed:300,regular,700"]  }});</script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
